--- a/css/index.css
+++ b/css/index.css
@@ -172,6 +172,10 @@ header nav {
   padding: 30px;
   background-color: #F2C84B;
 }
+.footer-content {
+  padding: 30px;
+  background-color: #F2C84B;
+}
 .index-page-container {
   margin: 0px auto;
   width: 880px;
@@ -189,4 +193,35 @@ header nav {
 .index-page-container .top-banner .top-text {
   width: 50%;
   padding: 20px;
+}
+.index-page-container .middle-content {
+  padding: 20px auto;
+  text-align: center;
+  border-bottom: 1px solid black;
+}
+.index-page-container .middle-content h2 {
+  padding-top: 20px;
+}
+.index-page-container .middle-content .middle-content-reason {
+  display: flex;
+  justify-content: space-between;
+}
+.index-page-container .middle-content .middle-content-reason .reason-box {
+  padding: 13px;
+  margin: 5px;
+}
+.index-page-container .middle-content .middle-content-reason .reason-box h3 {
+  font-size: 2.6rem;
+  margin: 15px 0;
+}
+.index-page-container .middle-content .middle-content-reason .reason-box p {
+  text-align: left;
+}
+.index-page-container .bottom-banner {
+  text-align: center;
+  margin: 10px 0;
+}
+.index-page-container .bottom-banner h2 {
+  margin: 30px auto;
+  line-height: 1.8;
 }
