--- a/less/home-page.less
+++ b/less/home-page.less
@@ -19,4 +19,43 @@
            padding: 20px;
        }
    }
+
+   .middle-content {
+       padding: 20px auto;
+       text-align: center;
+       border-bottom: 1px solid black;
+
+       h2{
+           padding-top: 20px;
+       }
+
+       .middle-content-reason {
+           display: flex;
+           justify-content: space-between;
+
+           .reason-box {
+               padding: 13px;
+               margin: 5px;
+
+               h3 {
+                   font-size: 2.6rem;
+                   margin: 15px 0;
+               }
+
+               p {
+                   text-align: left;
+               }
+           }
+       }
+    }
+
+    .bottom-banner {
+        text-align: center;
+        margin: 10px 0;
+
+        h2{
+            margin: 30px auto;
+            line-height: 1.8;
+        }
+    }
 }
