--- a/less/variables.less
+++ b/less/variables.less
@@ -3,3 +3,12 @@
 @border-color: #BF800B;
 @shadow-color: #F2AC29;
 @highlight-color: #BF0A0A;
+@light-primary: lighten(@primary-color, 30%);
+@light-secondary: lighten(@secondary-color, 10%);
+
+//font
+@nav-font: "Cabin";
+
+//responsive design
+@tablet: ~"(max-width:800px)";
+@mobile: ~"(max-width:500px)";
