--- a/less/global.less
+++ b/less/global.less
@@ -7,13 +7,13 @@
   }
   
   html, body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lalezar', sans-serif;
   
     
   }
   
   h1, h2, h3, h4, h5 {
-    font-family: 'Indie Flower', cursive;
+    font-family: 'Russo One';
   }
   
   h1 {
@@ -36,14 +36,14 @@
     padding-bottom: 10px;
   }
   
-  img {
-    max-width: 100%;
-    height: auto;
-  }
+   img {
+     max-width: 100%;
+     height: auto;
+   }
   
-  .container {
-    max-width: 800px;
-    width: 100%;
-    margin: 0 auto;
-  }
+   .container {
+     max-width: 800px;
+     width: 100%;
+     margin: 0 auto;
+   }
   
