--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,26 +1,59 @@
 
 .index-page-container {
    margin: 0px auto;
-   width: 880px;
+   width: 100%;
 
    .top-banner{
-       display: flex;
-       justify-content: center;
-       align-content: space-between;
+        display: flex;
+       justify-content: flex-end;
+       align-content: flex-end;
        border-bottom: 1px solid black;
+       background-image: url(../image/top-banner.jpg);
+       background-color:#fafafa;
+       background-size: 95%;
+       background-position: top left;
+       background-repeat: no-repeat;
+        background-attachment: scroll;
+        
+        img {
+            visibility: hidden;
+            width:3%;
+        }
        
-       img {
-           width: 50%;
-           padding: 20px;
-       }
-
+       
        .top-text {
-           width: 50%;
-           padding: 20px;
-       }
-   }
+           width: 28%;
+           margin: 30px;
+           padding: 100px 20px; 
+           border-radius: 10px;
+          //border: 1px solid grey;
+          //background-color: #dcdcdc;
+          
+       
+        h2 {
+            margin: 30px auto;
+            font-size: 2.4rem;
+        }
+
+        button {
+            .button-style-desktop;
+           .button-gradient;
+
+           a{
+               text-decoration: none;
+               color: black;
+           }
+        }
+        
+        button:hover {
+            .button-hover;
+        }
+        }   
+     }
+   
 
    .middle-content {
+       width: 100%;
        padding: 20px auto;
        text-align: center;
        border-bottom: 1px solid black;
@@ -52,10 +85,176 @@
     .bottom-banner {
         text-align: center;
         margin: 10px 0;
+        margin-bottom: 50px;
 
         h2{
-            margin: 30px auto;
+            margin: 10px auto;
             line-height: 1.8;
+        }
+
+        button {
+            .button-style-desktop;
+           .button-gradient;
+
+           a{
+            text-decoration: none;
+            color: black;
+        }
+        }
+    }
+}
+
+.team-page-container {
+    margin: 0px auto;
+    width: 100%;
+
+    .top-banner {
+        display: flex;
+       
+        img {
+            width: 50%;
+            padding: 2%;
+        }
+
+        .team-msg {
+            width: 50%;
+            padding: 5%;
+        }
+    }
+
+    .middle-content {
+        margin: 0px auto;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+
+        h1 {
+            text-align: center;
+            padding: 20px;
+        }
+
+        .team-member-info{
+        display: flex;
+        flex-direction: column;
+       
+        .team-row-one {
+            display: flex;
+            align-content: center;
+
+        }
+
+        .team-row-two {
+            display: flex;
+           // justify-content: 
+        }
+
+        .person {
+            padding: 20px;
+            margin: 20px 5%;
+            border: 1px solid @secondary-color;
+            border-radius: 20px;
+            width: 50%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+
+            img {
+                position: relative;
+                width: 100px;
+                height: 100px;
+                border-radius: 10px;
+                overflow: hidden;
+            }
+
+            h2 {
+                font-size: 1.6rem;
+                margin-top: 10px; 
+            }
+        }
+     }
+    }
+
+}
+
+
+
+@media @tablet {
+    .index-page-container {
+        .top-banner{
+            h1 #team {
+                visibility: visible;
+                font-size: 3rem;
+            }        
+        }
+    }
+}
+
+@media @mobile {
+    .index-page-container {
+        .top-banner{
+            flex-direction: column;
+            background-image: none;
+            justify-content: center;
+
+            img {
+                visibility: visible;
+                width: 100%;
+                margin-bottom: 10px;
+            }
+
+            .top-text {
+                width: 100%;
+                padding: 10px;
+                margin: 0px;
+                text-align: center;
+
+                h1 {
+                    font-size: 3.0rem;
+                }
+
+                h2 {
+                    font-size: 1.6rem;
+                    word-wrap: normal;
+                }
+            }
+        }
+
+        .middle-content {
+            margin: 0px;
+
+            .middle-content-reason{
+                flex-direction: column;
+            }
+        }
+
+        .bottom-banner {
+            margin: 1%;
+
+            button {
+                margin: 2%;
+            }
+        }
+    }
+}
+
+@media @mobile {
+    .team-page-container{
+
+        .top-banner {
+            flex-direction: column;
+
+            img {
+                width: 100%;
+            }
+
+            .team-msg {
+                width: 100%;
+            }
+        }
+        .team-row-one {
+            flex-flow: wrap;
+            align-items: content;
         }
     }
 }
