--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,4 +1,45 @@
-header nav {
-    padding: 30px;
+header {
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
     background-color: @primary-color;
+    padding: 20px;
+
+nav {
+    //padding: 30px;
+    //background-color: @primary-color;
+    display: flex;
+    padding-right: 3%;
+    //justify-content: space-between;
+    
+    a {
+      .nav-text;
+    }
+ }
+}
+
+@media @mobile {
+    header {
+       padding: 0px;
+        text-align: center;
+   flex-direction: column;
+   justify-content: center;
+   align-content: center;
+
+   h1 {
+       font-size: 3 rem;
+   }
+
+   nav {
+       justify-content: center;
+       padding: 0px;
+       padding-left: 30px;
+       margin: 0px;
+       margin-top: 10px;
+       
+       a{
+           //padding-left: 3%;
+       }
+    }
+}
 }
