About Page updated with new font and flex box

--- a/less/variables.less
+++ b/less/variables.less
@@ -5,6 +5,7 @@
 @highlight-color: #BF0A0A;
 @light-primary: lighten(@primary-color, 30%);
 @light-secondary: lighten(@secondary-color, 10%);
+@dark-secondary: darken(@secondary-color, 20%);
 
 //font
 @nav-font: "Cabin";
