--- a/less/footer.less
+++ b/less/footer.less
@@ -19,7 +19,7 @@
     }
 }
 
-@media @mobile {
+@media @tablet {
     .footer-content {
         padding: 20px 0;
         width: 100%;
@@ -38,6 +38,28 @@
            font-size: 3rem;
            padding: 10px 0;
         }
-
     }
 }
+
+// @media @mobile {
+//     .footer-content {
+//         padding: 20px 0;
+//         width: 100%;
+//         flex-direction: column-reverse;
+//         justify-content: center;
+//         align-items: center;
+
+//         nav {
+//             width: 100%;
+//             //margin-left: 15px;
+//             justify-content: center;
+//         }
+          
+//         h1 {
+//            text-align: center;
+//            font-size: 3rem;
+//            padding: 10px 0;
+//         }
+
+//     }
+// }
