--- a/less/home-page.less
+++ b/less/home-page.less
@@ -9,7 +9,7 @@
        align-content: flex-end;
        border-bottom: 1px solid black;
        background-image: url(../image/top-banner.jpg);
-       background-color:#fafafa;
+       background-color:#f6f6ff;
        background-size: 95%;
        background-position: top left;
        background-repeat: no-repeat;
@@ -67,6 +67,10 @@
             color: black;
        }
 
+       h2:hover {
+           color: @secondary-color;
+       }
+
        .middle-content-reason {
            display: flex;
            justify-content: space-between;
@@ -105,6 +109,10 @@
             text-decoration: none;
             color: black;
         }
+        }
+
+        button:hover {
+            .button-hover;
         }
     }
 }
@@ -211,10 +219,7 @@
                
             }
 
-            .icons {
-                display: flex; 
-              
-            }
+           
             a img {
                 width: 40px;     
                 height: 40px;  
@@ -231,9 +236,24 @@
 @media @tablet {
     .index-page-container {
         .top-banner{
-            h1 #team {
+            background-image: none;
+           // flex-direction: row-reverse;
+           // align-content: center;
+            
+            img {
                 visibility: visible;
-                font-size: 3rem;
+                width: 75%;
+                //margin: 50px 0;;
+            }
+
+            .top-text {
+                margin-left: 0px;
+            h1 {
+                font-size: 3.2rem;
+            }
+            h2 {
+                font-size: 2.6rem;
+            }
             }        
         }
     }
@@ -295,6 +315,12 @@
 
 @media @tablet {
     .about-page-container {
+        .top-banner {
+            img {
+                margin: 20px 0;
+            }
+        }
+
         .middle-content {
          .team-member-info {
             flex-flow: row wrap;
