--- a/less/home-page.less
+++ b/less/home-page.less
@@ -35,19 +35,21 @@
             font-size: 2.4rem;
         }
 
+        a{
+            text-decoration: none;
+             color: black;
+    
         button {
             .button-style-desktop;
            .button-gradient;
+            }
 
-           a{
-               text-decoration: none;
-               color: black;
-           }
+            button:hover {
+            .button-hover;
+            cursor: pointer;
+            }
         }
         
-        button:hover {
-            .button-hover;
-        }
         }   
      }
    
