--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,6 +2,7 @@
 .index-page-container {
    margin: 0px auto;
    width: 100%;
+   background-color: white;
 
    .top-banner{
         display: flex;
@@ -268,6 +269,7 @@
             background-image: none;
             justify-content: center;
             border-bottom: 2px dashed @border-color;
+            background-color: white;
 
 
             img {
